--- a/apps/site/src/_pages/legal/terms/1_products.mdx
+++ b/apps/site/src/_pages/legal/terms/1_products.mdx
@@ -9,7 +9,7 @@ redirect_from:
   - /legal/products
   - /legal/terms/additional-product
   - /legal/terms/additional-products
-  - /legal/terms/products
+  - /legal/terms/product
   - /terms/additional-product
   - /terms/additional-products
   - /terms/product
