Fix broken links in `legal` pages, add repo READMEs (#1081)
* Update 00_index.mdx

* Update and rename 1_product.mdx to 1_products.mdx

* Create README.md

* Update README.md

* Create README.md

* Update `apps/README.md`

* Update apps/site/src/_pages/legal/terms/1_products.mdx

--- a/apps/site/src/_pages/legal/terms/1_products.mdx
+++ b/apps/site/src/_pages/legal/terms/1_products.mdx
@@ -1,13 +1,19 @@
 ---
 title: Block Protocol Terms for Additional Products and Features
 shortTitle: Additional Product and Feature Terms
-location: /legal/terms/product
+location: /legal/terms/products
 redirect_from:
   - /legal/additional-product
+  - /legal/additional-products
   - /legal/product
+  - /legal/products
   - /legal/terms/additional-product
+  - /legal/terms/additional-products
+  - /legal/terms/product
   - /terms/additional-product
+  - /terms/additional-products
   - /terms/product
+  - /terms/products
 topics:
   - Policy
   - Legal
