tweak service definition

--- a/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
@@ -10,7 +10,7 @@ The module defines messages which correspond to specific requests available from
 
 **Provider:** a company, organization or person that provides a service or services (e.g. Mapbox)
 
-**Service:** a request which meets a specific functional goal, typically external to the embedding application and accessed via third-party API endpoint or integration (e.g. Retrieve Address).
+**Service:** a request handler which meets a specific functional goal, typically external to the embedding application and accessed via third-party API endpoint or integration (e.g. Retrieve Address).
 
 ## Messages
 
