--- a/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
@@ -16,7 +16,7 @@ The service module enables blocks to interact with external services without nee
 
 ### <Hidden>Handling messages </Hidden>Summary
 
-The service module specifies named messages from named service providers, any messages exchanged between application and block should be consistent with the shape and intent of those messages.
+The service module specifies named messages from named service providers, and any messages exchanged between application and block should be consistent with the shape and intent of those messages.
 
 How exactly the embedding application generates those messages is beyond the scope of the Block Protocol, so long as the schema and intent are met.
 
