--- a/apps/site/src/_pages/legal/terms/1_products.mdx
+++ b/apps/site/src/_pages/legal/terms/1_products.mdx
@@ -45,12 +45,12 @@ The Block Protocol Hub ([Þ Hub](https://blockprotocol.org/hub)) is a Block, Ser
 
 External Services provide access to free and paid APIs and endpoints from the Block Protocol and a range of third-parties directly via the Service. These enable you to both create and experience rich, high-quality, interactive blocks. Access to External Services is billed on a usage basis. Included allowances and entitlements to External Service access are outlined on the [blockprotocol.org/pricing](https://blockprotocol.org/pricing) page. Overage Charges are accrued by Customers in arrears based on actual usage of External Services above the included entitlements in a Customer's Subscription License Term or other commercial Agreement with the Block Protocol. Your use of an External Service must comply with both the [Block Protocol Community Guidelines](/legal/community) and [Block Protocol Acceptable Use Policy](/legal/acceptable-use), as well as any terms laid forth by the External Service itself. These include:
 
-| Third-Party Provider | External Services                                                               | Applicable Terms                                                         |
-| -------------------- | ------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
-| OpenAI               | DALL-E, GPT-3 Ada, GPT-3 Babbage, GPT-3 Curie, GPT-3 Davinci                    | [OpenAI Terms of Use](https://openai.com/terms/)                         |
-| Mapbox               | Address Autofill, Static Map Images, Isochrone, Directions, Temporary Geocoding | [Mapbox Terms of Service](https://www.mapbox.com/legal/tos)              |
-| Block Protocol       | OpenAI Whisper                                                                  | [Block Protocol Terms of Service](https://blockprotocol.org/legal/terms) |
-| HASH                 | HASH, HASH Engine                                                               | [HASH Terms of Service](https://hash.ai/legal/terms)                     |
+| Third-Party Provider | External Services                                                                    | Applicable Terms                                                         |
+| -------------------- | ------------------------------------------------------------------------------------ | ------------------------------------------------------------------------ |
+| OpenAI               | DALL-E, GPT-3 Ada, GPT-3.5 Turbo, GPT-3 Babbage, GPT-3 Curie, GPT-3 Davinci, Whisper | [OpenAI Terms of Use](https://openai.com/terms/)                         |
+| Mapbox               | Address Autofill, Static Map Images, Isochrone, Directions, Temporary Geocoding      | [Mapbox Terms of Service](https://www.mapbox.com/legal/tos)              |
+| Block Protocol       | Þ Hub                                                                                | [Block Protocol Terms of Service](https://blockprotocol.org/legal/terms) |
+| HASH                 | HASH, HASH Engine                                                                    | [HASH Terms of Service](https://hash.ai/legal/terms)                     |
 
 In addition, you must not use the External Services product or service:
 
