add message definition summary

--- a/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
@@ -32,6 +32,10 @@ Embedding applications MAY generate a response to a block's message by doing any
 
 ### Error definitions
 
+### <Hidden>Message definitions </Hidden>Summary
+
+The message signatures in the service specification aim to be as consistent as possible with the equivalent requests and responses from the named service provider, subject to exceptions mentioned elsewhere in this specification.
+
 #### <Hidden>Error definitions </Hidden>Specification
 
 If a request fails, embedding applications MUST provide blocks with an error which complies with the specification, i.e. contains a listed code and a message.
