--- a/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
@@ -18,7 +18,7 @@ The service module enables blocks to interact with external services without nee
 
 The service module specifies named messages from named service providers, and any messages exchanged between application and block should be consistent with the shape and intent of those messages.
 
-How exactly the embedding application generates those messages is beyond the scope of the Block Protocol, so long as the schema and intent are met.
+How exactly the embedding application generates those messages is beyond the scope of the Block Protocol, so long as the schema and intent of the message as described in this specification are met.
 
 #### <Hidden>Handling messages </Hidden>Specification
 
