--- a/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
@@ -38,7 +38,7 @@ The message signatures in the service specification aim to be as consistent as p
 
 #### <Hidden>Error definitions </Hidden>Specification
 
-If a request fails, embedding applications MUST provide blocks with an error which complies with the specification, i.e. contains a listed code and a message.
+If a request fails, embedding applications MUST provide blocks with an error which complies with this specification, i.e. contains a listed code and a message.
 
 Embedding applications MAY withhold or translate error codes and messages sent by the service provider when reporting an error to the block.
 
