ft: add GPT-3.5 Turbo copy

--- a/apps/site/src/_pages/legal/terms/1_products.mdx
+++ b/apps/site/src/_pages/legal/terms/1_products.mdx
@@ -47,7 +47,7 @@ External Services provide access to free and paid APIs and endpoints from the Bl
 
 | Third-Party Provider | External Services                                                               | Applicable Terms                                                         |
 | -------------------- | ------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
-| OpenAI               | DALL-E, GPT-3 Ada, GPT-3 Babbage, GPT-3 Curie, GPT-3 Davinci                    | [OpenAI Terms of Use](https://openai.com/terms/)                         |
+| OpenAI               | DALL-E, GPT-3 Ada, GPT-3 Babbage, GPT-3 Curie, GPT-3 Davinci, GPT-3.5 Turbo     | [OpenAI Terms of Use](https://openai.com/terms/)                         |
 | Mapbox               | Address Autofill, Static Map Images, Isochrone, Directions, Temporary Geocoding | [Mapbox Terms of Service](https://www.mapbox.com/legal/tos)              |
 | Block Protocol       | OpenAI Whisper                                                                  | [Block Protocol Terms of Service](https://blockprotocol.org/legal/terms) |
 | HASH                 | HASH, HASH Engine                                                               | [HASH Terms of Service](https://hash.ai/legal/terms)                     |
