--- a/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/04_service-module.mdx
@@ -16,9 +16,9 @@ The service module enables blocks to interact with external services without nee
 
 ### <Hidden>Handling messages </Hidden>Summary
 
-The service module specifies named messages from named service providers, and any messages exchanged between application and block should be consistent with the shape and intent of those messages.
+Any messages exchanged between application and block should be consistent with the shape and intent of the messages as described in this specification.
 
-How exactly the embedding application generates those messages is beyond the scope of the Block Protocol, so long as the schema and intent of the message as described in this specification are met.
+While the messages are based on APIs available from external service providers, how exactly the embedding application generates responses to the block is beyond the scope of the Block Protocol, so long as the schema and intent of the message as described in this specification are met – i.e. the embedding application need not call the external service provider if they have another means of generating an appropriate response.
 
 #### <Hidden>Handling messages </Hidden>Specification
 
