--- a/libs/wordpress-plugin/plugin/trunk/changelog.txt
+++ b/libs/wordpress-plugin/plugin/trunk/changelog.txt
@@ -1,5 +1,10 @@
 == Changelog ==
 
+= 0.0.3 =
+* Notification when using unsupported database version
+* Fix rich text rendering
+* Icon for block category
+
 = 0.0.2 =
 * Improve rich text editing handling, handling older blocks in editor and API endpoints.
 
