--- a/libs/wordpress-plugin/plugin/trunk/changelog.txt
+++ b/libs/wordpress-plugin/plugin/trunk/changelog.txt
@@ -4,6 +4,7 @@
 * Notification when using unsupported database version
 * Fix rich text rendering
 * Icon for block category
+* Better error reporting
 
 = 0.0.2 =
 * Improve rich text editing handling, handling older blocks in editor and API endpoints.
