WordPress plugin: category icon, fix text rendering, fix console warning (#1131)
* add icon to block category

* fix rich text html rendering in readonly mode

* fix asset enqueuing in editor. update version to 0.0.3

* add wordpress-plugin to labeler

* mention better error reporting in changelog

* remove redundant icon setting in server

* fix package name and labeler path

--- a/libs/wordpress-plugin/plugin/trunk/changelog.txt
+++ b/libs/wordpress-plugin/plugin/trunk/changelog.txt
@@ -1,5 +1,11 @@
 == Changelog ==
 
+= 0.0.3 =
+* Notification when using unsupported database version
+* Fix rich text rendering
+* Icon for block category
+* Better error reporting
+
 = 0.0.2 =
 * Improve rich text editing handling, handling older blocks in editor and API endpoints.
 
