--- a/apps/site/src/_pages/legal/terms/1_products.mdx
+++ b/apps/site/src/_pages/legal/terms/1_products.mdx
@@ -7,6 +7,7 @@ redirect_from:
   - /legal/additional-products
   - /legal/product
   - /legal/products
+  - /legal/terms-for-products
   - /legal/terms/additional-product
   - /legal/terms/additional-products
   - /legal/terms/product
