--- a/apps/site/src/_pages/docs/4_spec/99_roadmap.mdx
+++ b/apps/site/src/_pages/docs/4_spec/99_roadmap.mdx
@@ -1,6 +1,6 @@
 # Roadmap
 
-## Adoption Strategy
+## Adoption strategy
 
 _Coming soon_
 
@@ -11,7 +11,7 @@ _Coming soon_
 
 ## Roadmap
 
-### Proposed Changes
+### Proposed changes
 
 **RFCs:** the "RFC" (Request For Comment) process provides a consistent and controlled path for new features to enter the protocol's specification. Many changes, including most bug fixes and documentation improvements can be implemented and reviewed without going through this process. However, when changes are considered "substantial" enough, we require that they first take shape as RFCs, are subject to community comment, and are designed in a way that produces broad agreement approved by the Block Protocol core team. This process serves to transparently document in detail the considerations behind major changes, and enables spec evolution to take place in a way that accounts for all community member's interests.
 
@@ -21,7 +21,7 @@ _Coming soon_
 
 _Insert list to active RFCs hosted on blockprotocol.org, generated from `rfcs` contents_
 
-#### New Modules
+#### New modules
 
 We welcome suggestions for other modules that may be useful, via GitHub [discussions](https://github.com/blockprotocol/blockprotocol/discussions) or by creating [RFCs](https://github.com/blockprotocol/blockprotocol/tree/main/rfcs).
 
