Add `/about` page link to roadmap

--- a/apps/site/src/_pages/docs/4_spec/99_roadmap.mdx
+++ b/apps/site/src/_pages/docs/4_spec/99_roadmap.mdx
@@ -1,5 +1,7 @@
 # Roadmap
 
+Our aim is to develop a new standard for building frontend components, or "blocks", whose styling and logic are cleanly separated from data. [Learn more >](https://blockprotocol.org/about)
+
 ## Adoption strategy
 
 _Coming soon_
