Change comment style

--- a/apps/site/src/_pages/docs/4_spec/99_roadmap.mdx
+++ b/apps/site/src/_pages/docs/4_spec/99_roadmap.mdx
@@ -14,7 +14,7 @@ Our aim is to develop a new standard for building frontend components, or "block
 ## History
 
 _Coming soon_
-<!-- Link to RFCs accepted, document module releases and new versions of spec -->
+/* Link to RFCs accepted, document module releases and new versions of spec */
 
 ## Roadmap
 
@@ -26,7 +26,7 @@ _Coming soon_
 
 #### Active RFCs
 
-_Insert list to active RFCs hosted on blockprotocol.org, generated from `rfcs` contents_
+/* Insert list to active RFCs hosted on blockprotocol.org, generated from `rfcs` contents */
 
 #### New modules
 
